<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#666666"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp" android:contentDescription="@string/app_name" android:src="@drawable/icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/timeframe"
            android:textColor="#FFFFFF"
            android:textSize="24dp" />
    </LinearLayout>

    <TextView
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:id="@+id/edtSetup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:text="@string/interval_text"
        android:textSize="16dp" />

    <LinearLayout
        android:id="@+id/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#AAAAAA"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnOK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:text="@string/next" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:text="@string/back" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edtSetup"
        android:layout_margin = "8dp"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/rdbYears"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:checked="true" android:text="@string/years"/>

        <RadioButton
            android:id="@+id/rdbSemesters"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/semesters" />
    </RadioGroup>

</RelativeLayout>