<?xml version="1.0" encoding="UTF-8" ?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    			android:layout_width = "fill_parent"
    			android:layout_height = "fill_parent">
    <LinearLayout android:orientation="horizontal"
        		  android:id="@+id/header"
        		  android:background="#666666"
        		  android:layout_alignParentTop="true"
        		  android:layout_alignParentLeft="true"
        		  android:layout_alignParentRight="true"
        		  android:layout_width="fill_parent"
        		  android:layout_height="wrap_content">
        <ImageView android:src="@drawable/icon"
            	   android:layout_height="48dp"
            	   android:layout_width="48dp"/>
        <TextView android:text="@string/setup"
            	  android:textColor="#FFFFFF"
            	  android:textSize="36dp"
            	  android:layout_gravity="center_vertical"
            	  android:layout_width="wrap_content"
            	  android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView android:layout_above="@+id/ButtonBar"
        	  android:layout_below="@+id/header"
        	  android:layout_height="wrap_content"
        	  android:layout_width = "fill_parent"
        	  android:textSize="16dp"
        	  android:text="@string/setup_text"
        	  android:gravity="center" />
    <LinearLayout android:id="@+id/ButtonBar"
        		  android:background="#AAAAAA"
        		  android:orientation="horizontal"
        		  android:layout_height="wrap_content"
        		  android:layout_width="fill_parent"
        		  android:layout_alignParentBottom="true">
        <Button android:id="@+id/btnOK"
            	android:text="@string/OK"
            	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:layout_marginTop="4dp" />
        <Button android:id="@+id/btnCancel"
            	android:text="@string/cancel"
            	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:layout_marginTop="4dp"/>
    </LinearLayout>
</RelativeLayout>