<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">

	<TextView android:text="@string/name" android:layout_height="wrap_content"
		android:id="@+id/txtName" android:layout_width="wrap_content"
		android:layout_margin="8dp" android:layout_alignParentTop="true"
		android:layout_alignParentLeft="true" />

	<EditText android:id="@+id/edtName" android:layout_width="match_parent"
		android:layout_height="wrap_content" android:layout_alignParentRight="true"
		android:layout_alignBaseline="@+id/txtName" android:layout_toRightOf="@+id/txtName" />
	<View android:id="@+id/spacerView" android:background="#000000"
		android:layout_height="5dp" android:layout_width="fill_parent"
		android:layout_below="@+id/edtName" />
	<LinearLayout android:id="@+id/footer"
		android:layout_alignParentBottom="true" android:orientation="horizontal"
		android:layout_height="48dp" android:layout_width="fill_parent"
		android:background="#AAAAAA">

		<Button android:id="@+id/btnOK" android:text="@string/OK"
			android:layout_width="0dp" android:layout_height="wrap_content"
			android:layout_weight="1" android:layout_marginTop="4dp" />
		<Button android:id="@+id/btnCancel" android:text="@string/cancel"
			android:layout_width="0dp" android:layout_height="wrap_content"
			android:layout_weight="1" android:layout_marginTop="4dp" />
	</LinearLayout>


	<ListView android:id="@+id/lstMarkTypes" android:layout_width="fill_parent"
		android:layout_below="@+id/spacerView" android:layout_above="@+id/footer"
		android:layout_height="0dp" android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true" />
</RelativeLayout>